--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -9,6 +9,14 @@ p {
   margin: 0;
 }
 
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 p:last-child {
   margin-bottom: 0;
 }
