Связал страницы стилей

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,12 @@
 
 
 @import url('./header.css');
+@import url('./section-hero.css');
+@import url('./section-advantage.css');
+@import url('./section-components.css');
+@import url('./section-howtomade.css');
+@import url('./section-products.css');
+@import url('./section-sellers.css');
+@import url('./section-revievs.css');
+@import url('./section-subscribe.css');
+@import url('./footer.css');
