NavrA82-HOWTOMADE-HTML-06.05.

--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -1,3 +1,55 @@
-<section>
- 
+<!-- ? ======================== HOWTOMADE SECTION ============================ -->
+<section class="howtomade-section">
+   <div class="howtomade-container">
+      <h2 class="howtomade-title">
+         hOW IT’S<span class="howtomade-title-span">&nbsp;made?</span>
+      </h2>
+      <img
+								class="howtomade-img"
+								srcset="./src/img/howmade/video-wpapper-desktop-x2.jpg 2x"
+								src="./src/img/howmade/video-wpapper-desktop-x1.jpg"
+								alt="making-chocolate-photo"
+								width="600"
+								height="400"/>
+      <div class="howtomade-desc-wrap">
+         <h3 class="howtomade-subtitle">
+            Try our chocolates today and discover the perfect balance of flavor
+         </h3>
+         <ul class="howtomade-list">
+            <li class="howtomade-item">
+             <div class="howtomade-item-ellipse"></div>
+             <p class="howtomade-item-text">
+                  Heat the milk in a saucepan without bringing it to a boil. Add
+                  sugar and cocoa powder.
+               </p>
+            </li>
+            <li class="howtomade-item">
+             <div class="howtomade-item-ellipse"></div>
+             <p class="howtomade-item-text">
+                  At the same time, prepare a water bath. Melt the butter on it.
+               </p>
+            </li>
+            <li class="howtomade-item">
+             <div class="howtomade-item-ellipse"></div>
+             <p class="howtomade-item-text">
+                  "Mix" the milk mixture and already liquid butter. Mix
+                  thoroughly with a silicone spatula so that the mass becomes
+                  uniform and silky.
+               </p>
+            </li>
+            <li class="howtomade-item">
+             <div class="howtomade-item-ellipse"></div>
+             <p class="howtomade-item-text">Heat the mixture over low heat, letting it barely boil.</p>
+            </li>
+            <li class="howtomade-item">
+             <div class="howtomade-item-ellipse"></div>
+             <p class="howtomade-item-text">
+                  Pour the chocolate into special containers (can be replaced
+                  with ice molds). Allow to cool and harden.
+               </p>
+            </li>
+         </ul>
+      </div>
+   </div>
 </section>
+<!-- ? ======================== /HOWTOMADE SECTION ============================ -->
