--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,45 @@
-<footer> </footer>
+<footer>
+    <section class="footer-section">
+        <div>
+            <h2 class="footer-slogan">
+                <span class="first-word">Chocolate</span> a delicious <br> cure for a bad
+                day
+            </h2>
+            <div class="contact-and-soc-media">
+                <div>
+                    <h3 class="footer-contact-had">Contact us</h3>
+                    <ul class="footer-contact-list">
+                        <li class="footer-contact-item">
+                            <a class="footer-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+                        </li>
+
+                        <li class="footer-contact-item">
+                            <a class="footer-link" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+                        </li>
+                        
+                
+                    </ul></div>
+                 <div>
+                    <ul class="footer-social-media">
+                        <li class="footer-social-media-item"><a>
+                                <p class="sm">X</p>
+                            </a></li>
+                        <li class="footer-social-media-item"><a>
+                                <p class="sm">X</p>
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-line">
+            <ul class="footer-navigation-list">
+                <li class="footer-navigation-item" id="">Home</li>
+                <li class="footer-navigation-item" id="">How is made</li>
+                <li class="footer-navigation-item" id="">Our products</li>
+                <li class="footer-navigation-item" id="">Top sellers</li>
+                <li class="footer-navigation-item" id="">Chocolate is loved</li>
+            </ul>
+        </div>
+    </section>
+</footer>
