--- a/src/css/section-howtomade.css
+++ b/src/css/section-howtomade.css
@@ -1,21 +1,58 @@
 /* ? ======= HOWTOMADE SECTION ====== */
 .howtomade-section {
+ padding-top: 128px;
 }
 .howtomade-container {
+ margin-left: auto;
+ margin-right: auto;
+ max-width: 1200px;
+ outline: 2px solid tomato;
+ padding-left: 32px;
+ padding-right: 32px;
 }
 .howtomade-title {
+ font-family: 'Montserrat';
+ font-style: normal;
+ font-weight: 600;
+ font-size: 24px;
+ line-height: 1.17;
+ text-align: center;
+ letter-spacing: -0.03em;
+ text-transform: uppercase;
+ color: #111111;
+ margin-bottom: 50px;
 }
 .howtomade-title-span {
+ color: #FD9222;
+
+}
+.howtomade-wrapper {
+ display: flex;
 }
 .howtomade-img {
 }
 .howtomade-desc-wrap {
+ padding: 32px;
 }
 .howtomade-subtitle {
+ width: 350px;
+ font-family: 'Montserrat';
+ font-style: normal;
+ font-weight: 600;
+ font-size: 18px;
+ line-height: 1.33;
+ color: #111111;
+ margin-bottom: 28px;
 }
+
 .howtomade-list {
+ display: flex;
+ flex-direction: column;
+ row-gap: 24px;
 }
 .howtomade-item {
+ display: flex;
+ 
 }
 .howtomade-item-ellipse {
  width: 8px;
@@ -25,6 +62,14 @@
  background: #4C4C4C;
  border: 1px solid #ECEDED;
  border-radius: 50%;
+ margin-right: 8px;
 }
 .howtomade-item-text {
+ font-family: 'Montserrat';
+ font-style: normal;
+ font-weight: 400;
+ font-size: 14px;
+ line-height: 1.29;
+ letter-spacing: -0.02em;
+ color: #111111;
 }
