--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
          aria-controls="mobile-menu"
       >
          <svg class="menu-button-icon" width="40" height="40">
-            <use class="icon-burger" href="./"></use>
+            <use class="icon-burger" href="../img/icons/icons.svg#icon-burger"></use>
          </svg>
       </button>
 
