--- a/src/css/root-colors.css
+++ b/src/css/root-colors.css
@@ -4,4 +4,7 @@
   
   /*NAVY-BLUE-MODAL* Overlay */
   --Herobackground: rgba(46, 47, 66, 0.7);
+  --Main-white: #ffffff;
+  --Adventage-Section: #1e1823;
+  --Adventage-p-color: rgba(255, 255, 255, 0.7);
 }
