--- a/src/partials/section-advantage.html
+++ b/src/partials/section-advantage.html
@@ -5,7 +5,7 @@
       <li class="benefits-item">
          <div class="svg-wrap">
             <svg class="svg-adventages" width="32" height="32">
-               <use href="./img/icons/icons.svg#icon-chokolate-adv"></use>
+               <use class="benefits-use"  href="./img/icons/icons.svg#icon-chokolate-adv"></use>
             </svg>
          </div>
          <h3 class="benefits-title">Unsurpassed taste</h3>
