--- a/src/css/section-advantage.css
+++ b/src/css/section-advantage.css
@@ -17,7 +17,7 @@
    white-space: nowrap;
 }
 
-.benefits {
+.container-benefits {
    background-color: #1e1823;
 }
 
@@ -46,9 +46,7 @@ ul {
 
 .svg-adventages {
    margin: 15px;
-   border: 1px solid rgba(255, 255, 255, 0.5);
-   border-radius: 365px;
-   gap: 22px;
+  
 }
 
 @media screen and (min-width: 375px) {
@@ -72,7 +70,11 @@ ul {
       padding-bottom: 18px;
    }
    .svg-wrap {
-      padding-bottom: 20px;
+      width: 62px;
+      height: 62px;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      border-radius: 365px;
+      margin: 20px 0;
    }
 
    .benefits-list li:not(:first-child) {
@@ -80,7 +82,7 @@ ul {
    }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
    .container-benefits {
       min-width: 704px;
       padding: 50px 32px;
@@ -93,8 +95,9 @@ ul {
       flex-wrap: wrap;
    }
 
-   .benefits-list {
+   ul.benefits-list {
       display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
       width: 100%;
       gap: 32px;
@@ -112,11 +115,11 @@ ul {
 @media screen and (min-width: 1200px) {
    .container-benefits {
       min-width: 1100px;
+      padding: 50px 50px;
    }
 
    .benefits-item {
-      display: flex;
-      flex-direction: row;
+     flex-basis: calc((100% - 70px) / 3);
       justify-content: center;
       align-items: flex-start;
       padding: 0px;
@@ -126,4 +129,10 @@ ul {
    .benefits-list li:not(:first-child) {
       margin-top: 0;
    }
+
+   .benefits-title {
+      display: flex;
+    justify-content: flex-start;
+   }
+
 }
