--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,53 @@
 <div class="container">
-  
+   <nav class="nav">
+      <a class="logo" href="./index.html"
+         >SIMPLY CHOCOLATE<span class="logo-item"></span></a
+      >
+
+      <ul class="nav-menu">
+         <li class="nav-menu-item">
+            <a href="./index.html" class="nav-menu-link"
+               ><span class="nav-link-line"></span>Home</a
+            >
+         </li>
+         <li class="nav-menu-item">
+            <a href="./portfolio.html" class="nav-menu-link">How it’s made?</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="./contacts.html" class="nav-menu-link">Our products</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="./contacts.html" class="nav-menu-link">Top sellers</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="./contacts.html" class="nav-menu-link">Chocolate is loved</a>
+         </li>
+      </ul>
+
+      <button
+         class="menu-toggle js-open-menu"
+         aria-expanded="false"
+         aria-controls="mobile-menu"
+      >
+         <svg class="menu-button-icon" width="40" height="40">
+            <use
+               class="icon-burger"
+               href="./images/icons.svg#icon-burger-menu"
+            ></use>
+         </svg>
+      </button>
+
+      <div class="menu-container js-menu-container" id="mobile-menu">
+         <button type="button" class="menu-toggle js-close-menu">
+            <svg class="menu-button-close" width="24" height="24">
+               <use
+                  class="icon-close"
+                  href="./images/icons.svg#icon-close-burger"
+               ></use>
+            </svg>
+         </button>
+
+      </div>
+      
+   </nav>
 </div>
