--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,25 +4,7 @@
          >SIMPLY CHOCOLATE<span class="logo-item"></span></a
       >
 
-      <ul class="nav-menu">
-         <li class="nav-menu-item">
-            <a href="./index.html" class="nav-menu-link"
-               ><span class="nav-link-line"></span>Home</a
-            >
-         </li>
-         <li class="nav-menu-item">
-            <a href="./portfolio.html" class="nav-menu-link">How it’s made?</a>
-         </li>
-         <li class="nav-menu-item">
-            <a href="./contacts.html" class="nav-menu-link">Our products</a>
-         </li>
-         <li class="nav-menu-item">
-            <a href="./contacts.html" class="nav-menu-link">Top sellers</a>
-         </li>
-         <li class="nav-menu-item">
-            <a href="./contacts.html" class="nav-menu-link">Chocolate is loved</a>
-         </li>
-      </ul>
+      
 
       <button
          class="menu-toggle js-open-menu"
@@ -45,8 +27,27 @@
                   href="./images/icons.svg#icon-close-burger"
                ></use>
             </svg>
-         </button>
 
+         </button>
+         <ul class="nav-menu">
+            <li class="nav-menu-item">
+               <a href="#" class="nav-menu-link"
+                  ><span class="nav-link-line"></span>Home</a
+               >
+            </li>
+            <li class="nav-menu-item">
+               <a href="#" class="nav-menu-link">How it’s made?</a>
+            </li>
+            <li class="nav-menu-item">
+               <a href=".#" class="nav-menu-link">Our products</a>
+            </li>
+            <li class="nav-menu-item">
+               <a href=".#" class="nav-menu-link">Top sellers</a>
+            </li>
+            <li class="nav-menu-item">
+               <a href="#" class="nav-menu-link">Chocolate is loved</a>
+            </li>
+         </ul>
       </div>
       
    </nav>
