--- a/src/partials/section-advantage.html
+++ b/src/partials/section-advantage.html
@@ -13,7 +13,7 @@
             Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.
          </p>
       </li>
-      <li class="benefits-item">
+      <li class="benefits-item item-line">
          <div class="svg-wrap">
             <svg class="svg-adventages" width="32" height="32">
                <use href="./img/icons/icons.svg#icon-coin"></use>
@@ -24,7 +24,7 @@
             Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.
          </p>
       </li>
-      <li class="benefits-item">
+      <li class="benefits-item item-line">
          <div class="svg-wrap">
             <svg class="svg-adventages" width="32" height="32">
                <use href="./img/icons/icons.svg#icon-spoon"></use>
