--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <div class="container">
    <nav class="nav">
       <a class="logo" href="./index.html"
-         >SIMPLY CHOCOLATE<span class="logo-item"></span></a
+         ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="../img/icons/logo-desktop.svg" alt=""></span></a
       >
 
       
@@ -14,7 +14,7 @@
          <svg class="menu-button-icon" width="40" height="40">
             <use
                class="icon-burger"
-               href="./images/icons.svg#icon-burger-menu"
+               href="../img/icons/icons.svg#icon-burger"
             ></use>
          </svg>
       </button>
@@ -23,8 +23,7 @@
          <button type="button" class="menu-toggle js-close-menu">
             <svg class="menu-button-close" width="24" height="24">
                <use
-                  class="icon-close"
-                  href="./images/icons.svg#icon-close-burger"
+                  href="../img/icons/icons.svg#icon-close"
                ></use>
             </svg>
 
