--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,5 +49,22 @@
          </ul>
       </div>
       
+
+      <ul class="social-menu">
+         <li class="social-item">
+            <a href="" class="social-link">
+               <svg width="24" height="24">
+                  <use href="../img/icons/icons.svg#icon-instagram"></use>
+               </svg>
+            </a>
+         </li>
+         <li class="social-item">
+            <a href="" class="social-link">
+               <svg width="24" height="24">
+                  <use href="../img/icons/icons.svg#icon-twitter"></use>
+               </svg>
+            </a>
+         </li>
+      </ul>
    </nav>
 </div>
