--- a/src/css/bodystyles.css
+++ b/src/css/bodystyles.css
@@ -1,7 +1,6 @@
 .container {
   padding: 0 15px;
   margin: 0 auto;
-  max-width:1166px;
 }
 
 body {
@@ -11,3 +10,45 @@ line-height: 1.28;
 letter-spacing: -0.02em;
 color: var(--dark);
 }
+
+@media screen and (max-width:374px) {
+  .container {
+    padding: 0 15px;
+    margin: 0 auto;
+    max-width: 375px;
+    
+  }  
+}
+@media screen and (min-width:375px) and (max-width:767px) {
+  .container {
+    padding: 0 15px;
+    margin: 0 auto;
+    width: 375px;
+    
+  }  
+}
+
+@media screen and (min-width:768px) {
+  .container {
+    padding: 0 15px;
+    margin: 0 auto;
+    width:768px;
+  }  
+}
+
+@media screen and (min-width:1200px) {
+  .container {
+    padding: 0 15px;
+    margin: 0 auto;
+    width:1166px;
+  }  
+}
+
+
+
+
+
+
+
+
+
