--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -1,5 +1,5 @@
 <section class="howtomade-section">
-   <div class="howtomade-container">
+   <div class="container">
       <h2 class="howtomade-title">
          hOW IT’S<span class="howtomade-title-span">&nbsp;made?</span>
       </h2>
