--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
          </svg>
       </button>
 
-      <!-- <div class="menu-container js-menu-container" id="mobile-menu">
+      <div class="menu-container js-menu-container" id="mobile-menu">
          <button type="button" class="menu-toggle js-close-menu">
             <svg class="menu-button-close" width="24" height="24">
                <use
@@ -65,6 +65,6 @@
                </svg>
             </a>
          </li>
-      </ul> -->
+      </ul>
    </nav>
 </div>
