--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -4,38 +4,42 @@
          hOW IT’S<span class="howtomade-title-span">&nbsp;made?</span>
       </h2>
       <div class="howtomade-wrapper">
-         <picture class="howtomade-img-wrap">
-            <source
-               srcset="
-                  /img/howmade/video-wpapper-desktop-x1.jpg 1x,
-                  /img/howmade/video-wpapper-desktop-x2.jpg 2x
-               "
-               media="(min-width: 1200px)"
-            />
-            <source
-               srcset="
-                  /img/howmade/video-wpapper-tablet-x1.jpg 1x,
-                  /img/howmade/video-wpapper-tablet-x2.jpg 2x
-               "
-               media="(min-width: 768px)"
-            />
-            <source
-               srcset="
-                  /img/howmade/video-wpapper-mobile-x1.jpg 1x,
-                  /img/howmade/video-wpapper-mobile-x2.jpg 2x
-               "
-               media="(max-width: 767px)"
-            />
-            <img class="howtomade-img"
-               src="/img/howmade/video-wpapper-desktop-x1.jpg"
-               alt="making-chocolate-photo"
-               width="600"
-               height="400"
-            />
-         </picture>
-         <svg class="howtomade-icon-wrap" width="44" height="44">
-            <use href="/img/icons/play.svg#icon-play" class="howtomade-icon"></use>
-         </svg>
+         <div class="howtomade-left-side">
+            <picture class="howtomade-img-wrap">
+               <source
+                  srcset="
+                     /img/howmade/video-wpapper-desktop-x1.jpg 1x,
+                     /img/howmade/video-wpapper-desktop-x2.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+               />
+               <source
+                  srcset="
+                     /img/howmade/video-wpapper-tablet-x1.jpg 1x,
+                     /img/howmade/video-wpapper-tablet-x2.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+               />
+               <source
+                  srcset="
+                     /img/howmade/video-wpapper-mobile-x1.jpg 1x,
+                     /img/howmade/video-wpapper-mobile-x2.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+               />
+               <img
+                  class="howtomade-img"
+                  src="/img/howmade/video-wpapper-desktop-x1.jpg"
+                  alt="making-chocolate-photo"
+               />
+            </picture>
+            <svg class="howtomade-icon-wrap" width="44" height="44">
+               <use
+                  href="/img/icons/play.svg#icon-play"
+                  class="howtomade-icon"
+               ></use>
+            </svg>
+         </div>
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
                Try our chocolates today and discover the perfect balance of
