--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -32,10 +32,17 @@
                width="600"
                height="400"
             />
+            <a class="howtomade-icon-link" 
+               href=""
+					target="_blank"
+					rel="noopener noreferrer nofollow">
+               <svg class="howtomade-icon-wrap" width="44" height="44">
+                  <use href="./img/icons/play.svg" alt="" class="howtomade-icon"></use>
+               </svg>
+            </a>
+            <iframe class="howtomade-video" width="600" height="400" src="https://www.youtube.com/embed/41UbWmXKWkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
          </picture>
-         <svg class="howtomade-icon-wrap" width="44" height="44">
-            <use href="/img/icons/play.svg#icon-play" class="howtomade-icon"></use>
-         </svg>
+         
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
                Try our chocolates today and discover the perfect balance of
