--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,8 +5,6 @@
 
 
 .nav {
-   display: flex;
-   align-items: center;
   
    
 }
@@ -14,9 +12,6 @@
    display: flex;
    column-gap: 8px;
    align-items: center;
-   
-/* identical to box height, or 111% */
-
 }
 .logo-text {
    font-family: 'Montserrat';
@@ -52,9 +47,7 @@ letter-spacing: -0.03em;
 .icon-close {
 }
 .nav-menu {
-   display: flex;
-   column-gap: 24px;
-   font-weight: 500;
+  
 }
 .nav-menu-item {
 }
@@ -80,6 +73,12 @@ letter-spacing: -0.03em;
    fill:#fff;
    stroke: #111111;
 }
+.social-mobile-menu {
+}
+.social-mobile-item {
+}
+.social-mobile-link {
+}
 
 @media screen and (max-width: 767px) {
    .header {
@@ -94,9 +93,27 @@ letter-spacing: -0.03em;
    }
 }
 @media screen and (max-width: 1199px) {
-   .menu-container {
-      display: none;
-   }
+ .nav {
+   display: flex;
+   justify-content: space-between;
+ }
+ 
+ 
+   .menu-container.js-menu-container.is-open {
+   display: block;
+   position: absolute;
+   top: 0;
+   left: 0;
+   background-color: green;
+   width: 100vw;
+   height: 100vh;
+ }
+ .menu-container.js-menu-container {
+   display: none;
+ }
+ .social-menu {
+   display: none;
+}
 }
 
 
@@ -104,6 +121,15 @@ letter-spacing: -0.03em;
    .header {
       padding-top: 24px;
       padding-bottom: 32px;
+   }
+   .nav {
+      display: flex;
+      align-items: center;
+   }
+   .nav-menu {
+      display: flex;
+      column-gap: 24px;
+      font-weight: 500;
    }
    .menu-container {
       flex:1 1;
@@ -118,6 +144,9 @@ letter-spacing: -0.03em;
       display: flex;
       column-gap: 18px;
       margin-left: 137px;
+   }
+   .social-mobile-menu {
+   display: none;
    }
 }
 
