--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -47,6 +47,24 @@
                <a href="#" class="nav-menu-link">Chocolate is loved</a>
             </li>
          </ul>
+
+
+         <ul class="social-mobile-menu">
+            <li class="social-mobile-item">
+               <a href="" class="social-mobile-link">
+                  <svg width="24" height="24">
+                     <use href="../img/icons/icons.svg#icon-instagram"></use>
+                  </svg>
+               </a>
+            </li>
+            <li class="social-mobile-item">
+               <a href="" class="social-mobile-link">
+                  <svg width="24" height="24">
+                     <use href="../img/icons/icons.svg#icon-twitter"></use>
+                  </svg>
+               </a>
+            </li>
+         </ul>
       </div>
       
 
