--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -1,4 +1,4 @@
-/* @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
    .hero-container {
       margin: 0 auto;
       padding: 395px 20px 20px;
@@ -8,7 +8,7 @@
       background-position: center;
       text-align: center;
    }
-} */
+}
 
 .hero-hidded-title {
    position: absolute;
@@ -26,7 +26,6 @@
    padding-top: 0;
    padding-left: 20px;
    padding-right: 20px;
-   padding-bottom: 36px;
 }
 .container {
 }
@@ -46,4 +45,5 @@
 .scroll-down-button {
 }
 .scroll-down {
+   display: block;
 }
