--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -10,7 +10,7 @@
         <a class="how-its-made-button" href="#howtomade">How it&#39;s made</a>
       </div>
       <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down" width="28" height="28">
-          <use href="../img/icons/scroll.svg"></use>
+          <use href="./img/icons/scroll.svg"></use>
         </svg></a>
     </div>
   </div>
