--- a/src/css/header.css
+++ b/src/css/header.css
@@ -103,9 +103,10 @@ letter-spacing: -0.03em;
    display: block;
    position: absolute;
    top: 0;
-   left: 0;
-   background-color: green;
-   width: 100vw;
+   right: 0;
+   color: #fff;
+   background-color: #1E1823;
+   width: 58%;
    height: 100vh;
  }
  .menu-container.js-menu-container {
