--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,14 +1,14 @@
 <section class="section-product">
-   <h2 class="section-product-title">Our <span>products</span></h2>
+   <h2 class="section-product-title">Our<span>products</span></h2>
    <ul class="section-product-list">
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Dark chocolate with orange"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">orange</h3>
             <p class="product-item-description">Dark chocolate</p>
@@ -16,13 +16,13 @@
          <button type="button" class="product-item-btn">45 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Milk chocolate with apple and cranberry"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">APPLE&#38;CRANBERRY</h3>
             <p class="product-item-description">Milk chocolate</p>
@@ -30,13 +30,13 @@
          <button type="button" class="product-item-btn">50 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Dark chocolate with lime and sea salt"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">lime&#38;sea salt</h3>
             <p class="product-item-description">Dark chocolate</p>
@@ -44,13 +44,13 @@
          <button type="button" class="product-item-btn">66 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Dark chocolate with pineapple"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">pineapple</h3>
             <p class="product-item-description">Dark chocolate</p>
@@ -58,13 +58,13 @@
          <button type="button" class="product-item-btn">54 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Classic milk chocolate"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">Classic</h3>
             <p class="product-item-description">Milk chocolate</p>
@@ -72,13 +72,13 @@
          <button type="button" class="product-item-btn">45 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Milk chocolate with honey"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">honey</h3>
             <p class="product-item-description">Milk chocolate</p>
@@ -86,13 +86,13 @@
          <button type="button" class="product-item-btn">50 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Dark chocolate with roasted fruits"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">Roasted fruits</h3>
             <p class="product-item-description">Dark chocolate</p>
@@ -100,13 +100,13 @@
          <button type="button" class="product-item-btn">66 UAH</button>
       </li>
       <li class="section-product-item">
-         <img
+         <!-- <img
             srcset="./img/ 1x, ./img/ 2x"
             src="./img/"
             alt="Classic white chocolate"
             width="230"
             height="201"
-         />
+         /> -->
          <div class="product-item-content">
             <h3 class="product-item-title">Classic</h3>
             <p class="product-item-description">White chocolate</p>
