--- a/src/css/bodystyles.css
+++ b/src/css/bodystyles.css
@@ -14,8 +14,6 @@ color: var(--dark);
 
 @media screen and (max-width:374px) {
   .container {
-    padding: 0 15px;
-    margin: 0 auto;
     max-width: 365px;
     
   }  
@@ -27,7 +25,7 @@ color: var(--dark);
   }  
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:768px) and (max-width:1199px) {
   .container {
     max-width:734px;
   }  
@@ -35,8 +33,6 @@ color: var(--dark);
 
 @media screen and (min-width:1200px) {
   .container {
-    padding: 0 15px;
-    margin: 0 auto;
     width:1166px;
   }  
 }
