--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <div class="container">
    <nav class="nav">
       <a class="logo" href="./index.html"
-         ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="../img/icons/logo-desktop.svg" alt=""></span></a
+         ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="./img/icons/logo-desktop.svg" alt=""></span></a
       >
 
       
@@ -14,7 +14,7 @@
          <svg class="menu-button-icon" width="40" height="40">
             <use
                class="icon-burger"
-               href="../img/icons/icons.svg#icon-burger"
+               href="./img/icons/icons.svg#icon-burger"
             ></use>
          </svg>
       </button>
@@ -23,7 +23,7 @@
          <button type="button" class="menu-toggle js-close-menu">
             <svg class="menu-button-close" width="24" height="24">
                <use
-                  href="../img/icons/icons.svg#icon-close"
+                  href="./img/icons/icons.svg#icon-close"
                ></use>
             </svg>
 
@@ -53,14 +53,14 @@
             <li class="social-mobile-item">
                <a href="" class="social-mobile-link">
                   <svg width="24" height="24">
-                     <use href="../img/icons/icons.svg#icon-instagram"></use>
+                     <use href="./img/icons/icons.svg#icon-instagram"></use>
                   </svg>
                </a>
             </li>
             <li class="social-mobile-item">
                <a href="" class="social-mobile-link">
                   <svg width="24" height="24">
-                     <use href="../img/icons/icons.svg#icon-twitter"></use>
+                     <use href="./img/icons/icons.svg#icon-twitter"></use>
                   </svg>
                </a>
             </li>
@@ -72,14 +72,14 @@
          <li class="social-item">
             <a href="" class="social-link">
                <svg width="24" height="24">
-                  <use href="../img/icons/icons.svg#icon-instagram"></use>
+                  <use href="./img/icons/icons.svg#icon-instagram"></use>
                </svg>
             </a>
          </li>
          <li class="social-item">
             <a href="" class="social-link">
                <svg width="24" height="24">
-                  <use href="../img/icons/icons.svg#icon-twitter"></use>
+                  <use href="./img/icons/icons.svg#icon-twitter"></use>
                </svg>
             </a>
          </li>
