--- a/src/css/section-howtomade.css
+++ b/src/css/section-howtomade.css
@@ -1,11 +1,22 @@
 /*!##################### 375px-767px ########################### */
+@media screen and (min-width: 375px) {
+}
 /* ? ======= HOWTOMADE SECTION ====== */
 .howtomade-section {
    padding-top: 72px;
    background-color: #e2e2e2;
+   padding-left: 20px;
+   padding-right: 20px;
 }
-
+.howtomade-container {
+   margin-left: auto;
+   margin-right: auto;
+   max-width: 335px;
+   outline: 2px solid tomato;
+}
 .howtomade-title {
+   font-family: 'Montserrat';
+   font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 1.17;
@@ -19,37 +30,57 @@
    color: #fd9222;
 }
 .howtomade-wrapper {
-
+   display: flex;
+   flex-wrap: wrap;
+   gap: 20px;
+}
+.howtomade-img-wrap{
+   position: relative;
 }
 .howtomade-img {
-   background: linear-gradient(
+   background-color: linear-gradient(
          0deg,
          rgba(0, 0, 0, 0.4),
          rgba(0, 0, 0, 0.4)
       ),
       url(pastry-chef-preparing-chocolate-cake.jpg);
-      background-size: cover;
    border-radius: 15px;
-   width: 100%;
 }
-/* .howtomade-icon-wrap {
+.howtomade-icon-link,
+.howtomade-icon-wrap {
    position: absolute;
-   top: 232px;
-   left: 150px;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
    width: 35px;
    height: 35px;
    stroke: #fff;
    fill: tomato;
-   z-index: 3px;
-} */
-.howtomade-img-wrap {
-   display: block;
+   z-index: 10;
 }
-
+.howtomade-video {
+   position: absolute;
+   top: 0;
+   left: 0;
+   border-radius: 15px;
+   width: 100%;
+   max-width: 335px;
+   height: 100%;
+}
+.howtomade-icon  {
+   width: 35px;
+   height: 35px;
+   stroke: #fff;
+   fill: tomato;
+}
+.howtomade-icon-link:is(:focus, :hover) {
+   cursor: pointer;
+}
 .howtomade-desc-wrap {
    padding: 20px 14px;
    background-color: #ffffff;
    border-radius: 15px;
+   width: 100%;
 }
 .howtomade-subtitle {
    font-family: 'Montserrat';
@@ -60,14 +91,17 @@
    color: #111111;
    margin-bottom: 28px;
 }
-.howtomade-list:not(:last-child) {
-  margin-bottom: 18px;
+.howtomade-list {
+   display: flex;
+   flex-direction: column;
+   row-gap: 18px;
 }
-
 .howtomade-item {
-
+   display: flex;
+   position: relative;
+   padding-left: 16px;
 }
-/* .howtomade-item-ellipse {
+.howtomade-item-ellipse {
    position: absolute;
    width: 8px;
    height: 8px;
@@ -76,7 +110,7 @@
    background: #4c4c4c;
    border: 1px solid #eceded;
    border-radius: 50%;
-} */
+}
 .howtomade-item-text {
    font-family: 'Montserrat';
    font-style: normal;
@@ -85,47 +119,35 @@
    letter-spacing: -0.02em;
    color: #111111;
 }
-@media screen and (max-width:767px) {
-   .howtomade-item:not(:last-child) {
-      margin-bottom: 18px;
-   }
-}
 
 /* !##################### 768px-1199px ########################### */
-@media screen and (min-width: 768px) and (max-width:1199px) {
+@media screen and (min-width: 768px) {
    .howtomade-section {
       padding-top: 100px;
       background-color: #e2e2e2;
-      
    }
-   .howtomade-wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 0 45px;
+   .howtomade-container {
+      max-width: 614px;
    }
-
-   .howtomade-left-side {
-      flex:0 0 100%;
-    }
-
-    .howtomade-img {
-      height: 400px;
-    }
+   .howtomade-video {
+      max-width: 614px;
+   }
    .howtomade-desc-wrap {
       padding: 32px;
    }
-
    .howtomade-subtitle {
+      max-width: 350px;
       margin-bottom: 20px;
    }
    .howtomade-list {
+      padding-right: 70px;
    }
-   .howtomade-item:not(:last-child) {
-      margin-bottom: 18px;
+   .howtomade-img {
+      width: 614px;
    }
-
    .howtomade-icon-wrap {
-  
+      width: 44px;
+      height: 44px;
    }
    .howtomade-icon  {
       width: 44px;
@@ -140,27 +162,26 @@
       padding-left: 32px;
       padding-right: 32px;
    }
+   .howtomade-container {
+      max-width: 1136px;
+   }
    .howtomade-wrapper {
-      display: flex;    
-      column-gap: 20px;
-   }
-   .howtomade-left-side {
-      flex: 0 0 50%;
-   }
-   .howtomade-desc-wrap {
-      height: 378px;
-      padding: 32px;
-      
-   }
-
-   .howtomade-icon-wrap {
+      flex-wrap: nowrap;
    }
    .howtomade-list {
+      row-gap: 24px;
    }
-   .howtomade-item:not(:last-child) {
-      margin-bottom: 24px;
+      .howtomade-list {
+      padding-right: 0;
+      max-width: 452px;
    }
-
+   .howtomade-img-wrap{
+      width: 125.27%;
+   }
    .howtomade-img {
+      width: 600px;
+   }
+      .howtomade-video {
+      max-width: 600px;
    }
 }
