--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,21 +30,21 @@
          </button>
          <ul class="nav-menu">
             <li class="nav-menu-item">
-               <a href="#" class="nav-menu-link"
+               <a href="#home" class="menu-toggle nav-menu-link"
                   ><span class="nav-link-line"></span>Home</a
                >
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="nav-menu-link">How it’s made?</a>
+               <a href="#howtomade" class="nav-menu-link">How it’s made?</a>
             </li>
             <li class="nav-menu-item">
-               <a href=".#" class="nav-menu-link">Our products</a>
+               <a href="#products" class="nav-menu-link">Our products</a>
             </li>
             <li class="nav-menu-item">
-               <a href=".#" class="nav-menu-link">Top sellers</a>
+               <a href="#review" class="nav-menu-link">Top sellers</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="nav-menu-link">Chocolate is loved</a>
+               <a href="#sellers" class="nav-menu-link">Chocolate is loved</a>
             </li>
          </ul>
 
