--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="home">
   <div class="container hero-container">
     <h1 class="hero-hidden-title">Chocolate</h1>
     <h2 class="hero-subtitle">Treat yourself or a loved one to
