--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,4 +1,4 @@
-<section class="section-product">
+<section class="section-product" id="products">
    <h2 class="section-product-title">Our<span>products</span></h2>
    <ul class="section-product-list">
       <li class="section-product-item">
