--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -1,4 +1,4 @@
-<section class="sellers-section">
+<section class="sellers-section" id="sellers">
   <div class="container sellers-container">    
     <h2 class="sellers-title"><span class="sellers-title-text">Top</span> Sellers</h2>
     <ul class="sellers-list">
